@@ -22,16 +22,19 @@
 #
 
 GENERATED_TEXINFOS = \
-	$(srcdir)/programmers.texi \
-	$(srcdir)/parts.texi \
-	$(srcdir)/programmer_types.texi \
-	$(srcdir)/version.texi
+	$(builddir)/programmers.texi \
+	$(builddir)/parts.texi \
+	$(builddir)/programmer_types.texi \
+	$(builddir)/version.texi
 
 CLEANFILES = \
 	$(GENERATED_TEXINFOS) \
-	stamp-vti
+	$(builddir)/stamp-vti
 
 info_TEXINFOS = avrdude.texi
+
+EXTRA_DIST = \
+	parts_comments.txt
 
 all-local: info html ps pdf
 
@@ -46,27 +49,27 @@ avrdude-html/avrdude.html: $(srcdir)/$(info_TEXINFOS) $(GENERATED_TEXINFOS)
 	 mv -f avrdude avrdude-html; \
 	fi;
 
-$(srcdir)/avrdude.info: $(GENERATED_TEXINFOS)
-$(srcdir)/avrdude.dvi: $(GENERATED_TEXINFOS)
-$(srcdir)/avrdude.pdf: $(GENERATED_TEXINFOS)
+$(builddir)/avrdude.info: $(GENERATED_TEXINFOS)
+$(builddir)/avrdude.dvi: $(GENERATED_TEXINFOS)
+$(builddir)/avrdude.pdf: $(GENERATED_TEXINFOS)
 
 # if it does not exist make this first
 ../avrdude$(EXEEXT):
 	$(MAKE) -C .. avrdude$(EXEEXT)
 
-$(srcdir)/programmers.texi: ../avrdude$(EXEEXT) ../avrdude.conf Makefile
+$(builddir)/programmers.texi: ../avrdude$(EXEEXT) ../avrdude.conf Makefile
 	../avrdude$(EXEEXT) -C ../avrdude.conf -c \? 2>&1 \
 	| $(AWK) '$$2 ~ /^=$$/ {printf("@item @code{%s} @tab %s\n",$$1,gensub("[^=]+=[ \t]*","",1))}' \
 	| sed "s# *,\? *<\?\(http://[^ \t>]*\)>\?#,@*\n@url{\1}#g" \
 	>programmers.texi
 
-$(srcdir)/programmer_types.texi: ../avrdude$(EXEEXT) ../avrdude.conf Makefile
+$(builddir)/programmer_types.texi: ../avrdude$(EXEEXT) ../avrdude.conf Makefile
 	../avrdude$(EXEEXT) -C ../avrdude.conf -c \?type 2>&1 \
 	| $(AWK) '$$2 ~ /^=$$/ {printf("@item @code{%s} @tab %s\n",$$1,gensub("[^=]+=[ \t]*","",1))}' \
 	| sed "s#<\?\(http://[^ \t,>]*\)>\?#@url{\1}#g" \
 	>programmer_types.texi
 
-$(srcdir)/parts.texi: ../avrdude$(EXEEXT) ../avrdude.conf parts_comments.txt Makefile
+$(builddir)/parts.texi: ../avrdude$(EXEEXT) ../avrdude.conf parts_comments.txt Makefile
 	../avrdude$(EXEEXT) -C ../avrdude.conf -p \? 2>&1 \
 	| $(AWK) '$$2 ~ /^=$$/ {printf("@item @code{%s} @tab %s\n",$$1,$$3)}' \
 	| sed -e "`sed 's:\([^ \t]*\)[ \t]*\(.*\):s/\1$$/\1 \2/g:g' <parts_comments.txt`" \
